# nautilus-librarian

./: .bandit.yml  .cspell.json  .gitignore  .jscpd.json  .markdown-link-check.json  .mega-linter.yml  .mypy.ini  .python-lint  .secretlintignore  .secretlintrc.json  .secrets.template  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: codeql-analysis.yml  deploy-documentation.yml  linter.yml  mega-linter.yml  publish-docker-image.yml  publish-github-release.yml  publish-pypi-package.yml  publish-pypi.yml  test-gold-drawings-processing-workflow.yml  test-workflow-integration-using-docker.yml  test-workflow-integration-using-pip.yml  test-workflow-integration-using-poetry.yml  test.yml
commands/: index.html
development/: index.html
docs/: commands.md  development.md  documentation.md  glossary.md  index.md  install.md  mkdocs.md
documentation/: index.html
glossary/: index.html
install/: index.html
licensing/: contributor_agreement_v01.md
search/: search_index.json
src/nautilus_librarian/: __main__.py  _helper.py  _helpers.py  _version.py  dvcapi.py  git.py  librarian_dvc.py  librarian_git.py  librarian_gpg.py  librarian_libvips.py  main.py  version.py
src/nautilus_librarian/domain/: directory.py  dvc_diff_media_parser.py  dvc_services_api.py  file_locator.py  filename.py  filepath.py  validate_filepaths.py
src/nautilus_librarian/mods/console/: utils.py
src/nautilus_librarian/mods/console/domain/: utils.py
src/nautilus_librarian/mods/dvc/domain/: api.py  dvc_command_wrapper.py  dvc_diff_parser.py  dvc_services_api.py  utils.py
src/nautilus_librarian/mods/dvc/typer/: commands.py
src/nautilus_librarian/mods/filesystem/domain/: absolute_filepath.py  directory.py  filename.py  filepath.py  relative_filepath.py
src/nautilus_librarian/mods/git/domain/: commit.py  config.py  git_command_wrapper.py  git_user.py  repo.py  utils.py
src/nautilus_librarian/mods/git/typer/: commands.py
src/nautilus_librarian/nautilus_dvc_api/: nautilus_dvc_api.py
src/nautilus_librarian/typer/: app.py  commands.py
src/nautilus_librarian/typer/commands/: gold_drawings_processing_workflow.py
tests/: conftest.py  namespace_modules_patch.py  test_main.py
tests/fixtures/gpg/: README.md  gpg-agent.conf
tests/test_dvc_api/: test_dvc_api.py
tests/test_nautilus_librarian/: utils.py
tests/test_nautilus_librarian/test_domain/: test_directory.py  test_dvc_diff_media_parser.py  test_dvc_diff_parser.py  test_file_locator.py  test_filename.py  test_filepath.py  test_validate_filepaths.py
tests/test_nautilus_librarian/test_dvc/: test_dvc.py
tests/test_nautilus_librarian/test_typer/test_commands/: test_gdpw_auto_commit_images_step.py  test_gdpw_validate_filenames_step.py  test_gold_drawings_processing_workflow.py
(+104 files in other folders)
