[tool.poetry]
name = "librarian"
version = "0.1.0"
description = "A Python Console application to handle media libraries like Git and DVC"
authors = ["Nautilus Cyberneering <jose@nautilus-cyberneering.de>"]
readme = "README.md"
packages = [
    { include = "nautilus_librarian", from = "src" },
]

[tool.poetry.scripts]
nautilus-librarian = "nautilus_librarian.main:app"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = ">=3.1.24"
PyGithub = ">=1.55"
pyvips = ">=2.1.16"
pytest = "^6.2.5"
dvc = {extras = ["azure"], version = "^2.8.3"}
typer = {extras = ["all"], version = "^0.4.0"}
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
